# decrunch

./: .clang-format  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  crn_decomp.cpp  crunch.h  decrunch.pyx  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
crunch/: crn_decomp.h  crnlib.h  dds_defs.h
examples/: basic_decode.py
tests/: test_main.py
tests/res/: README.md  dxt1-0.bcn  dxt1-1.bcn  dxt1-2.bcn  dxt1-3.bcn  dxt1-4.bcn  dxt1-5.bcn  dxt1-6.bcn  dxt1-7.bcn  dxt1.crn  dxt5-0.bcn  dxt5-1.bcn  dxt5-2.bcn  dxt5-3.bcn  dxt5-4.bcn  dxt5-5.bcn  dxt5-6.bcn  dxt5-7.bcn  dxt5.crn
