[metadata]
name = decrunch
version = 0.3.0
description = Python wrapper around Crunch DXTc decompressor
author = Robert Nix
author_email = mischanix@gmail.com
url = https://github.com/HearthSim/decrunch/
download_url = https://github.com/HearthSim/decrunch/tarball/master
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: zlib/libpng License
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Multimedia :: Graphics

[flake8]
ignore = W191
